# task-manager-clone-tauri-Communication-OS

./: README.md  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: lain.icns
src-tauri/src/: lib.rs  main.rs
src/components/: LainProfile.jsx  MainNavigasyon.jsx
src/pages/: CPUUsage.jsx  ComponentsInfo.jsx  DisksInfo.jsx  Home.jsx  NetworkInfo.jsx  ProcessInfo.jsx  SystemInfo.jsx
