[package]
name = "system_monitoring_dashboard"
version = "0.1.0"
description = "A Tauri App"
authors = ["ferivonus"]
edition = "2021"

[lib]
name = "system_monitoring_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.5", features = [] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
sysinfo = "0.32.0"
chrono = "0.4.38"
tokio = { version = "1.40", features = [
    "full",
] } # Use "full" feature for more functionality
